[package]
name = "space-invaders-emu"
version = "0.1.0"
authors = ["Rodrigo Batista de Moraes <rodrigobatsmoraes@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

members = ["intel8080"]

[dependencies]
winit = "0.22"
pixels = "0.0.2"
array-init = "0.1"
intel8080 = { version = "0.1.0", path = "intel8080" }
rodio = "0.11"

[features]

debug = ["intel8080/debug"]