[package]
name = "space-invaders-emu"
resolver = "2"
version = "0.1.0"
authors = ["Rodrigo Batista de Moraes <rodrigobatsmoraes@hotmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

members = ["intel8080", "space-invaders-wasm"]

[features]

debug = ["intel8080/debug"]

[dependencies]
intel8080 = { version = "0.1.0", path = "intel8080" }
array-init = "0.1"

pixels = "0.9.0"
winit = "0.26.1"
rodio = "0.11"
